--- a/rating/rating.css
+++ b/rating/rating.css
@@ -1,5 +1,8 @@
-body {
+* {
   box-sizing: border-box;
+}
+
+body {
   width: 100vw;
   height: auto;
   font-family: 'Overpass', sans-serif;
@@ -8,17 +11,15 @@ body {
   line-height: 1.5rem;
 }
 
-article {
-  width: 95vw;
-  height: auto;
+/* article {
   margin: 7rem auto;
-}
+} */
 
 section#container {
-  width: 24.5vw;
-  margin: auto;
+  width: 29.32vw;
+  margin: 7rem auto;
   padding: 2rem;
-  background-color: rgb(25, 35, 46);
+  background-color: rgb(28, 38, 48);
   border-radius: 1.3rem;
 }
 
@@ -33,23 +34,29 @@ section#rate h1 {
 }
 
 section#star, section#btn button {
-  width: 1.5rem;
-  background-color: hsl(203, 21%, 22%);
+  width: 2.4rem;
+  background-color: rgb(37, 50, 58);
   border-radius: 50%;
+  padding: 0.47rem;
   text-align: center;
 }
 
 section#btn {
   /* width: 100%; */
-  border: 0.2rem solid red;
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  grid-gap: 0.9rem 0.5rem;
+  /* height: auto; */
+  /* margin-right: 4rem; */
+  border: 0.1rem solid red;
 }
 
 section#btn button {
   width: auto;
   border: none;
-  margin: 0.51rem;
+  /* margin: 1rem;
   margin-left: auto;
-  margin-top: auto;
+  margin-top: auto; */
   padding: 1.1rem;
 }
 
