--- a/rating/rating.css
+++ b/rating/rating.css
@@ -72,6 +72,7 @@ section form input {
   font-weight: 700;
   font-size: 1rem;
   padding: 0.9rem;
+  letter-spacing: 0.18rem;
 }
 
 section form input:hover {
